# 2025_LR_OOP_4

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: array.h  figure.h  points.h  rectangle.h  square.h  triangle.h
tests/: test.cpp
